k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-server
  name: api-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-server
  strategy: {}
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - image: acrmuakscoachdev.azurecr.io/api-server:v1.1
          name: api-server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "0.1"
              memory: "128Mi"
status: {}
