k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-server
  name: api-server
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: api-server
  type: ClusterIP
status:
  loadBalancer: {}
